feat: bulk plot